--- a/pom.xml
+++ b/pom.xml
@@ -34,5 +34,27 @@
           <version>5.2.5</version>
       </dependency>
 
+      <!-- Cucumber Java -->
+      <dependency>
+          <groupId>io.cucumber</groupId>
+          <artifactId>cucumber-java</artifactId>
+          <version>7.15.0</version>
+      </dependency>
+
+      <!-- Cucumber TestNG -->
+      <dependency>
+          <groupId>io.cucumber</groupId>
+          <artifactId>cucumber-testng</artifactId>
+          <version>7.15.0</version>
+      </dependency>
+
+      <!-- Cucumber Reporting (optional but useful) -->
+      <dependency>
+          <groupId>io.cucumber</groupId>
+          <artifactId>cucumber-plugin</artifactId>
+          <version>7.15.0</version>
+      </dependency>
+
+
   </dependencies>
 </project>
